# SocketClientServer

./: .gitignore  Note.md  README.md
headers/: IMURawData.hpp
headers/request/: BoolRequest.hpp  ShortRequest.hpp
headers/service/: CameraSrvData.hpp  IMUSrvData.hpp  PowerMonitorSrvData.hpp  StateMachineSrvData.hpp
socket_client/: CMakeLists.txt  main.cpp  socket_client.cpp  socket_client.hpp
socket_server/: CMakeLists.txt  main.cpp  socket_server.cpp  socket_server.hpp
